--- a/WEB_UI/App_LocalResources/GlobalResource.resx
+++ b/WEB_UI/App_LocalResources/GlobalResource.resx
@@ -117,6 +117,24 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="home_link_contact" xml:space="preserve">
+    <value>Контакты</value>
+  </data>
+  <data name="home_link_document" xml:space="preserve">
+    <value>Инструкции</value>
+  </data>
+  <data name="home_link_home" xml:space="preserve">
+    <value>Home</value>
+  </data>
+  <data name="home_link_services" xml:space="preserve">
+    <value>Сервисы</value>
+  </data>
+  <data name="home_link_system" xml:space="preserve">
+    <value>Системы</value>
+  </data>
+  <data name="home_menu" xml:space="preserve">
+    <value>Menu</value>
+  </data>
   <data name="home_title" xml:space="preserve">
     <value>ИДС</value>
   </data>
