--- a/WEB_UI/App_LocalResources/IDSMORSResource.resx
+++ b/WEB_UI/App_LocalResources/IDSMORSResource.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="bt_delete_text" xml:space="preserve">
+    <value>Удалить</value>
+  </data>
   <data name="bt_edit_text" xml:space="preserve">
     <value>Править</value>
   </data>
