add dir cargos..... & payerarrival

--- a/WEB_UI/App_LocalResources/IDSRWTResource.resx
+++ b/WEB_UI/App_LocalResources/IDSRWTResource.resx
@@ -241,7 +241,7 @@
     <value>Собственник</value>
   </data>
   <data name="title_name_plat" xml:space="preserve">
-    <value>Платиельщик с ЭПД</value>
+    <value>Плательщик с ЭПД</value>
   </data>
   <data name="title_name_rod_vag" xml:space="preserve">
     <value>Род вагона</value>
