--- a/WEB_UI/App_LocalResources/IDSRWTResource.resx
+++ b/WEB_UI/App_LocalResources/IDSRWTResource.resx
@@ -393,4 +393,10 @@
   <data name="title_rent_start" xml:space="preserve">
     <value>Начало аренды</value>
   </data>
+  <data name="title_doc_dt" xml:space="preserve">
+    <value>Дата обновления</value>
+  </data>
+  <data name="title_doc_status" xml:space="preserve">
+    <value>Статус</value>
+  </data>
 </root>
