add division to worm arrival sostav

--- a/WEB_UI/App_LocalResources/IDSRWTResource.resx
+++ b/WEB_UI/App_LocalResources/IDSRWTResource.resx
@@ -423,4 +423,7 @@
   <data name="title_arrival_count_car" xml:space="preserve">
     <value>Количество вагонов</value>
   </data>
+  <data name="title_devision_on_amkr" xml:space="preserve">
+    <value>Цех получатель</value>
+  </data>
 </root>
