--- a/WEB_UI/App_LocalResources/DirectoryResource.resx
+++ b/WEB_UI/App_LocalResources/DirectoryResource.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="cargo_title" xml:space="preserve">
-    <value>Справочник "Грузы"</value>
+    <value>Справочник "Грузы ИДС"</value>
   </data>
   <data name="home_title" xml:space="preserve">
     <value>Справочники</value>
@@ -127,10 +127,10 @@
     <value>Грузы справочник ЕТ СНГ</value>
   </data>
   <data name="title_add_edit_cargo_name_en" xml:space="preserve">
-    <value>Наименование груза (анг.)</value>
+    <value>Наименование груза в ИДС (анг.)</value>
   </data>
   <data name="title_add_edit_cargo_name_ru" xml:space="preserve">
-    <value>Наименование груза (рус.)</value>
+    <value>Наименование груза в ИДС (рус.)</value>
   </data>
   <data name="title_add_edit_code_sap" xml:space="preserve">
     <value>Код в SAP</value>
@@ -139,6 +139,6 @@
     <value>Отправляемые грузы</value>
   </data>
   <data name="title_change_group_cargo_group" xml:space="preserve">
-    <value>Группы грузов</value>
+    <value>Группы грузов в ИДС</value>
   </data>
 </root>
