--- a/WEB_UI/App_LocalResources/DirectoryResource.resx
+++ b/WEB_UI/App_LocalResources/DirectoryResource.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="cargo_group_title" xml:space="preserve">
+    <value>Справочник "Группы грузов ИДС"</value>
+  </data>
   <data name="cargo_title" xml:space="preserve">
     <value>Справочник "Грузы ИДС"</value>
   </data>
