fix bag & coment TD + print report

--- a/WEB_UI/App_LocalResources/IDSRWTResource.resx
+++ b/WEB_UI/App_LocalResources/IDSRWTResource.resx
@@ -432,4 +432,13 @@
   <data name="title_devision_on_amkr_name" xml:space="preserve">
     <value>Цех\склад</value>
   </data>
+  <data name="title_material" xml:space="preserve">
+    <value>Материал</value>
+  </data>
+  <data name="title_material_code" xml:space="preserve">
+    <value>Код материала</value>
+  </data>
+  <data name="title_material_name" xml:space="preserve">
+    <value>Название материала</value>
+  </data>
 </root>
